--- a/sheepfarmer3000/pom.xml
+++ b/sheepfarmer3000/pom.xml
@@ -52,7 +52,11 @@
     </dependency>
             
 
-
+    <dependency>
+        <groupId>javax.mail</groupId>
+        <artifactId>mail</artifactId>
+        <version>1.4</version>
+    </dependency>
         
     <!-- Map Dependencies 
     Legg JMapViewer_29618.jar på c:\    finnes i zip fil som Alfredo la ut FB. 
