--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,6 @@
 # Logs and databases #
 ######################
 *.log
-*.sql
 *.sqlite
 
 # OS generated files #
@@ -47,4 +46,8 @@ target/
 .classpath
 .project
 .settings/
+
+# Properties files #
+######################
+.properties
 
