--- a/sheepfarmer3000/pom.xml
+++ b/sheepfarmer3000/pom.xml
@@ -38,12 +38,20 @@
         <scope>test</scope>
     </dependency>
     <dependency>
-        <groupId>hsqldb</groupId>
-        <artifactId>hsqldb</artifactId>
-        <version>1.8.0.7</version>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
+        <version>1.3.173</version>
         <scope>test</scope>
-        
     </dependency>
+            
+  <dependency>
+        <groupId>postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>9.1-901.jdbc3</version>
+        <scope>test</scope>
+    </dependency>            
+
+
     <dependency>
 	<groupId>com.googlecode.flyway</groupId>
 	<artifactId>flyway-core</artifactId>
