--- a/sheepfarmer3000/pom.xml
+++ b/sheepfarmer3000/pom.xml
@@ -37,20 +37,6 @@
         <version>4.11</version>
         <scope>test</scope>
     </dependency>
-    <dependency>
-        <groupId>com.h2database</groupId>
-        <artifactId>h2</artifactId>
-        <version>1.3.173</version>
-        <scope>test</scope>
-    </dependency>
-            
-  <dependency>
-        <groupId>postgresql</groupId>
-        <artifactId>postgresql</artifactId>
-        <version>9.1-901.jdbc3</version>
-        <scope>test</scope>
-    </dependency>            
-
 
     <dependency>
 	<groupId>com.googlecode.flyway</groupId>
@@ -134,6 +120,32 @@
                     </dependency>
                 </dependencies>
             </plugin>
+            
+                   <plugin>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <version>0.6.2.201302030002</version>
+                        <configuration>
+                            <destfile>${basedir}/target/coverage-reports/jacoco-unit.exec</destfile>
+                            <datafile>${basedir}/target/coverage-reports/jacoco-unit.exec</datafile>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>jacoco-initialize</id>
+                                <goals>
+                                    <goal>prepare-agent</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>jacoco-site</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>report</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+            
         </plugins>
     </build>
 </project>
