--- a/sheepfarmer3000/pom.xml
+++ b/sheepfarmer3000/pom.xml
@@ -79,7 +79,25 @@
     </dependencies>
   
     <build>
-        <plugins>
+
+       <plugins>
+           <plugin>
+               <artifactId>maven-assembly-plugin</artifactId>
+               <configuration>
+                   <archive>
+                       <manifest>
+                           <mainClass>org.prosjekt.gui.Main</mainClass>
+                       </manifest>
+                   </archive>
+                   <descriptorRefs>
+                       <descriptorRef>jar-with-dependencies</descriptorRef>
+                   </descriptorRefs>
+                     
+               </configuration>
+           </plugin>
+             
+            
+            
             <plugin>
                 <inherited>true</inherited>
                 <groupId>org.apache.maven.plugins</groupId>
